--- a/src/app/swapisearch/swapisearch.component.html
+++ b/src/app/swapisearch/swapisearch.component.html
@@ -21,8 +21,8 @@
   </div>
   <div class="container-results" *ngIf="endpoint !== null">
     <!-- <ol>
-      <li *ngFor="let result of results"> -->
-        {{ result }}
+      <li *ngFor="let res of results"> -->
+        {{ results | json }}
       <!-- </li>
     </ol> -->
   </div>
